# exmodcpp

./: CMakeLists.txt  README.md  init.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
cmake/: README.md
coro_task/: CMakeLists.txt  README.md  main.cpp
coro_tasksched/: CMakeLists.txt  README.md  main.cpp
cuda_hello/: CMakeLists.txt  README.md  main.cu
cuda_mandel/: CMakeLists.txt  README.md  main.cpp  main.cu
hello/: CMakeLists.txt  README.md
pimpl/: CMakeLists.txt  main.cpp  widget.cpp  widget.hpp
plot/: CMakeLists.txt  main.cpp
stdexec_hello/: CMakeLists.txt  main.cpp
stdexec_mandel/: CMakeLists.txt  main.cpp
stdexec_partasks/: CMakeLists.txt  README.md  main.cpp
threads_condvar/: CMakeLists.txt  README.md  main.cpp
type_erasure/: CMakeLists.txt  README.md  chatgpt.cpp  main1.cpp  main2.cpp  main3.cpp
